Fixed contrast issue with table header

--- a/lesson3/styles/small.css
+++ b/lesson3/styles/small.css
@@ -199,7 +199,7 @@ table td {
 }
 
 thead th {
-  color: #ffffff;
+  color: #000000;
   font-size: 1.15em;
 }
 
